--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "main": "index.ts",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "fastify": "^3.29.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.36",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.0",
