feature/auth - [ADD] add file auth

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.ts",
   "license": "MIT",
   "dependencies": {
+    "@fastify/helmet": "^8.1.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "fastify": "^3.29.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
